Fix lack of spacing in production

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -24,6 +24,7 @@ to-section {
     color: white;
     cursor: pointer;
     transition: 0.2s;
+    margin-left: 5px;
 
     &:hover {
         color: rgb(198, 164, 243);
